# Celebrity-Detection-and-QA-System

./: .dockerignore  .gitignore  Dockerfile  app.py  kubernetes-deployment.yml  main.py  pyproject.toml  requirements.txt
.circleci/: config.yml
app/: __init__.py  routes.py
app/utils/: celebrity_detector.py  image_handler.py  qa_engine.py
static/: style.css
templates/: index.html
